--- a/BSAI25054_HOME.html
+++ b/BSAI25054_HOME.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RK GENISYS</title>
+  <title>RK GENISYS NEW BRANCH</title>
   <link rel="stylesheet" href="BSAI25054 _style.css">
 </head>
 <body>
